# CORE

./: .gitignore  HARDWARE_SETUP.md  README.md  REFERENCES.md  config.json  main.py  requirements.txt  setup.sh  start.sh  wifi-failover.sh
.github/workflows/: build.yml
Beta/: README.md  train.py  yolo_live.py
Beta/Legacy/: ANALYSIS.md  Dockerfile  config_wizard.py  docker-compose.yml  start.ps1  start_bastet.bat  user_config.txt
Beta/Legacy/V1/: README.md  ai_agent.py  audio_listener.py  cleanup_old_model.py  convert_to_pdf.py  debug_log.txt  debug_log_local.txt  debug_mode.py  debug_output.txt  debug_output_2.txt  debug_output_final.txt  debug_output_fix.txt  debug_output_retry.txt  documentation_projet.md  list_hf_files.py  main.py  myges_integration.py  pormpt pour après redemarrage  projet.txt  prompt_presentation.md  requirements.txt  server.py  start_web_app.bat  system_config.json  test_myges.py  tts_module.py  vision.py
Beta/Legacy/V1/frontend/: index.html  package-lock.json  package.json
Beta/Legacy/V1/frontend/src/: App.css  App.jsx  index.css
Beta/core/: facial_recognition_live.py  facial_recognition_live_ip.py  yolov12x_new_code.py  yolov12x_new_code_ip.py
arduino/spotbot_controller/: spotbot_controller.ino
cache/: fabio_agenda.json  marius_agenda.json  simon_agenda.json  teano_agenda.json
config/: camera_calibration.yaml  hardware.yaml  rtabmap_params.yaml
core/: __init__.py  ai_agent.py  calendar.py  discovery.py  node_client.py  ptt.py  server.py  stt.py  tts.py  vision.py  vision_webrtc.py
remote_server/: database.py  main.py  requirements.txt
robot/: Dockerfile  bridge.py  requirements.txt  start_robot.sh  streamer.py
ros2_ws/src/spotbot_arduino_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/spotbot_arduino_bridge/launch/: arduino_bridge.launch.py
ros2_ws/src/spotbot_arduino_bridge/spotbot_arduino_bridge/: __init__.py  arduino_bridge_node.py  arduino_flasher.py
ros2_ws/src/spotbot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/spotbot_bringup/launch/: camera_mono.launch.py  camera_stereo.launch.py  gps_mag.launch.py  spotbot.launch.py
ros2_ws/src/spotbot_description/: CMakeLists.txt  package.xml
ros2_ws/src/spotbot_description/launch/: description.launch.py
ros2_ws/src/spotbot_description/urdf/: spotbot.urdf.xacro
ros2_ws/src/spotbot_motion/: package.xml  setup.cfg  setup.py
ros2_ws/src/spotbot_motion/launch/: motion.launch.py
ros2_ws/src/spotbot_motion/spotbot_motion/: __init__.py  gait_controller.py  ik_solver.py  motion_node.py
ros2_ws/src/spotbot_slam/: CMakeLists.txt  package.xml
ros2_ws/src/spotbot_slam/launch/: rtabmap_mono.launch.py  rtabmap_stereo.launch.py
ros2_ws/src/spotbot_slam/params/: rtabmap_mono.yaml  rtabmap_stereo.yaml
ros2_ws/src/spotbot_streaming/: package.xml  setup.cfg  setup.py
ros2_ws/src/spotbot_streaming/launch/: streaming.launch.py
ros2_ws/src/spotbot_streaming/spotbot_streaming/: __init__.py  camera_stream_node.py  wifi_manager.py  wifi_watchdog_node.py
web/: package-lock.json
web/src/: App.css  App.jsx
