<?xml version="1.0"?>
<package format="3">
  <name>spotbot_arduino_bridge</name>
  <version>1.0.0</version>
  <description>SpotBot Arduino bridge — Serial USB communication, auto-flash, IMU + servo control</description>
  <maintainer email="spotbot@robot.local">SpotBot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
