<?xml version="1.0"?>
<package format="3">
  <name>spotbot_description</name>
  <version>1.0.0</version>
  <description>SpotBot robot description — URDF pour SpotMicro 12-DOF quadruped</description>
  <maintainer email="spotbot@robot.local">SpotBot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
