<?xml version="1.0"?>
<package format="3">
  <name>spotbot_motion</name>
  <version>1.0.0</version>
  <description>SpotBot motion — inverse kinematics and gait generation for 12-DOF quadruped</description>
  <maintainer email="spotbot@robot.local">SpotBot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
