<?xml version="1.0"?>
<package format="3">
  <name>spotbot_slam</name>
  <version>1.0.0</version>
  <description>SpotBot V-SLAM — rtabmap mono and stereo configurations</description>
  <maintainer email="spotbot@robot.local">SpotBot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
