<?xml version="1.0"?>
<package format="3">
  <name>spotbot_streaming</name>
  <version>1.0.0</version>
  <description>
    SpotBot camera streaming with LAN discovery + RTSP fallback,
    Alfa WiFi auto-detection, and WiFi seamless roaming watchdog.
  </description>
  <maintainer email="spotbot@robot.local">SpotBot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
